--- a/MonoDroid.Dialog/MonoDroid.Dialog.csproj
+++ b/MonoDroid.Dialog/MonoDroid.Dialog.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
+    <Reference Include="OpenTK" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
