Added DialogActivity and refactored project so Context's aren't passed in every single Element ctor

--- a/MonoDroid.Dialog/MonoDroid.Dialog.csproj
+++ b/MonoDroid.Dialog/MonoDroid.Dialog.csproj
@@ -43,6 +43,7 @@
     <Compile Include="BindingContext.cs" />
     <Compile Include="CheckboxElement.cs" />
     <Compile Include="DateTimeElement.cs" />
+    <Compile Include="DialogActivity.cs" />
     <Compile Include="EntryElement.cs" />
     <Compile Include="FloatElement.cs" />
     <Compile Include="Group.cs" />
