Major changes, uses a DialogAdapter which is really an adapter with a SectionAdapter for each section.  Reworked a lot of the code base to make it operate more like MonoTouch.Dialog, which meant moving around references to Context's a lot.  The

--- a/MonoDroid.Dialog/MonoDroid.Dialog.csproj
+++ b/MonoDroid.Dialog/MonoDroid.Dialog.csproj
@@ -55,10 +55,10 @@
     <Compile Include="Reflect.cs" />
     <Compile Include="RootElement.cs" />
     <Compile Include="Section.cs" />
+    <Compile Include="SectionAdapter.cs" />
+    <Compile Include="DialogAdapter.cs" />
     <Compile Include="StringElement.cs" />
     <Compile Include="BooleanElement.cs" />
-    <Compile Include="DialogAdapter.cs" />
-    <Compile Include="DialogView.cs" />
     <Compile Include="Element.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewElement.cs" />
