--- a/Android.Dialog/Android.Dialog.csproj
+++ b/Android.Dialog/Android.Dialog.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Android.Dialog</RootNamespace>
-    <AssemblyName>MonoDroid.Dialog</AssemblyName>
+    <AssemblyName>Android.Dialog</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkVersion>v2.3</TargetFrameworkVersion>
     <AndroidSupportedAbis>armeabi%3barmeabi-v7a%3bx86</AndroidSupportedAbis>
