Slight code refactor, tweaking ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,6 @@ Thumbs.db
 *.rar
 *.tar
 *.zip
-
-DialogSampleApp/DialogSampleApp.pidb
-
-MonoDroid.Dialog/MonoDroid.Dialog.pidb
+*.pidb
 
 .DS_Store
