--- a/MonoCross.Droid/MonoCross.Droid.csproj
+++ b/MonoCross.Droid/MonoCross.Droid.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
+    <Reference Include="Mono.Android.Support.v4" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,9 +45,10 @@
   <ItemGroup>
     <Compile Include="MXActivityView.cs" />
     <Compile Include="MXDialogActivityView.cs" />
-    <Compile Include="MXListActivityView.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="MXListActivityView.cs" />
+    <Compile Include="MXFragmentView.cs" />
+    <Compile Include="MXDialogFragmentView.cs" />
+    <Compile Include="MXListFragmentView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MXDroidContainer.cs" />
     <Compile Include="MXTabActivityView.cs" />
@@ -60,13 +62,13 @@
   </Target>
   -->
   <ItemGroup>
+    <ProjectReference Include="..\..\Android.Dialog\Android.Dialog.csproj">
+      <Project>{33044c7b-47a4-4113-a61a-eb429407f818}</Project>
+      <Name>Android.Dialog</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MonoCross.Navigation\MonoCross.Navigation.MD.csproj">
       <Project>{0D2CC54A-4716-40B9-8110-453F528810FC}</Project>
       <Name>MonoCross.Navigation.MD</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Android.Dialog\Android.Dialog.csproj">
-      <Project>{33044C7B-47A4-4113-A61A-EB429407F818}</Project>
-      <Name>Android.Dialog</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
