--- a/CustomerManagement/CustomerManagement.Droid/CustomerManagement.Droid.csproj
+++ b/CustomerManagement/CustomerManagement.Droid/CustomerManagement.Droid.csproj
@@ -45,9 +45,7 @@
     <Reference Include="Mono.Android" />
     <Reference Include="Mono.Android.Support.v4" />
     <Reference Include="mscorlib" />
-    <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Web.Services" />
   </ItemGroup>
@@ -77,18 +75,17 @@
     <AndroidResource Include="Resources\Layout\Main.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\Layout-Large\Main.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Values\Strings.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Android.Dialog\Android.Dialog.csproj">
+    <ProjectReference Include="..\..\Android.Dialog\Android.Dialog.csproj">
       <Project>{33044c7b-47a4-4113-a61a-eb429407f818}</Project>
       <Name>Android.Dialog</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\CustomerManagement.Data\CustomerManagement.Data.MD.csproj">
-      <Project>{69AA2818-CD47-4DD4-8E51-CFE4DADC0725}</Project>
-      <Name>CustomerManagement.Data.MD</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\CustomerManagement.Shared\CustomerManagement.Shared.MD.csproj">
       <Project>{27513705-0A31-4A9F-9393-76B6C3CEA1AD}</Project>
