--- a/MonoCross.Droid/MonoCross.Droid.csproj
+++ b/MonoCross.Droid/MonoCross.Droid.csproj
@@ -37,10 +37,7 @@
     <Reference Include="Mono.Android" />
     <Reference Include="Mono.Android.Support.v4" />
     <Reference Include="mscorlib" />
-    <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MXActivityView.cs" />
@@ -62,7 +59,7 @@
   </Target>
   -->
   <ItemGroup>
-    <ProjectReference Include="..\..\Android.Dialog\Android.Dialog.csproj">
+    <ProjectReference Include="..\Android.Dialog\Android.Dialog.csproj">
       <Project>{33044c7b-47a4-4113-a61a-eb429407f818}</Project>
       <Name>Android.Dialog</Name>
     </ProjectReference>
