--- a/CustomerManagement/CustomerManagement.Webkit/CustomerManagement.Webkit.csproj
+++ b/CustomerManagement/CustomerManagement.Webkit/CustomerManagement.Webkit.csproj
@@ -21,7 +21,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -79,6 +79,9 @@
     <Content Include="Ajax.xml" />
     <Content Include="appIcon.png" />
     <Content Include="appSplash.png" />
+    <Content Include="App_Data\Xml\Customers.xml" />
+    <Content Include="App_Data\Xml\Orders.xml" />
+    <Content Include="App_Data\Xml\Products.xml" />
     <Content Include="Global.asax" />
     <Content Include="MonoCross\MonoCross.Navigation.dll" />
     <Content Include="MonoCross\MonoCross.Webkit.dll" />
@@ -178,9 +181,7 @@
     <Content Include="WebApp\Img\next.png" />
     <Content Include="WebApp\Img\up.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\CustomerManagement.Shared\CustomerManagement.Shared.csproj">
       <Project>{77EFE548-9D3B-4635-925C-4A9D7281BFE3}</Project>
