--- a/MonoCross.Navigation/MonoCross.Navigation.MT.csproj
+++ b/MonoCross.Navigation/MonoCross.Navigation.MT.csproj
@@ -73,5 +73,6 @@
     <Compile Include="MXView.cs" />
     <Compile Include="MXViewPerspective.cs" />
     <Compile Include="MXApplication.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
 </Project>
