--- a/MonoCross.Navigation/MonoCross.Navigation.MT.csproj
+++ b/MonoCross.Navigation/MonoCross.Navigation.MT.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
+  <Import Project="$(ProgramFiles)\MSBuild\MonoTouch\Novell.MonoTouch.Common.targets" Condition="'$(windir)' != '' " />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Compile Include="MXContainer.cs" />
